updated api with more functionalities, and a form for creating a store

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
     <ul>
       <% brands.forEach(x => { %>
       <li>
-        <a href="/api/stores/brand/<%= x.brand %> "><%= x.name %> </a>
+        <a href="/api/stores/brand/<%= x.value %> "><%= x.desc %> </a>
       </li>
       <% }) %>
     </ul>
