tweaked routes and controllers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,5 +33,7 @@
       Para buscar por zona ir a <a href="/api/stores/state/">'.../api/stores/state/'</a> y luego del state colocar la
       zona
     </p>
+    <h3>Crear una nueva tienda</h3>
+    <a href="/api/stores/store/new">Ir al formulario</a>
   </body>
 </html>
